# effective-rust

./: .gitignore  Cargo.toml  README.md
eff-attr/: Cargo.toml
eff-attr/src/: lib.rs
examples/: print.rs  sum_input_line.rs  wc.rs
src/: boxed.rs  context.rs  coproduct.rs  debug.rs  eff.rs  either.rs  embed.rs  future.rs  futures_compat.rs  generator.rs  handled.rs  lazy.rs  lib.rs  main.rs  next_event.rs  old_main.rs  poll_fn.rs  unhandled.rs
src/future/: future.rs  stream.rs
src/futures_compat/: future.rs  stream.rs
tests/: attr.rs  compose.rs  conv.rs  example.rs  frank_pipe.rs  frank_state.rs  frank_tee.rs  frunk_pipe.rs  frunk_state.rs  future.rs  invoke.rs  logging.rs  multithread.rs  nothandled.rs  perform_from.rs  rest_parameter.rs  simple.rs  state.rs  sum_input_line.rs  timer.rs
