[package]
name = "eff"
version = "0.0.8"
authors = ["pan"]
edition = "2018"

description = "Algebraic Effects Library for Rust"
repository = "https://github.com/pandaman64/effective-rust/"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
eff-attr = "0.0.8"
pin-utils = "0.1.0-alpha.4"
crossbeam-channel = "0.3.9"
futures-preview = "0.3.0-alpha.18"
pin-project = { version = "0.4.0-alpha.11", features = ["project_attr"] }

[dev-dependencies]
clap = "2.33.0"
runtime = "0.3.0-alpha.7"
tokio = "0.2.0-alpha.4"
tokio-timer = "0.3.0-alpha.4"

[workspace]
members = [
    "./",
    "eff-attr",
]
