[package]
name = "eff-attr"
version = "0.0.7"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

description = "Attribute macro for eff"
repository = "https://github.com/pandaman64/effective-rust/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
