[package]
name = "eff-attr"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

description = "Attribute macro for eff"
repository = "https://github.com/pandaman64/effective-rust/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
proc-macro-hack = "0.5.11"
syn = { version = "1.0.8", features = ["full"] }
quote = "1.0.2"
